--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,71 +11,19 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/editFieldsBarrie"
-        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/card_post" />
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/editFieldsBarrie"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:barrierDirection="top"
-        app:constraint_referenced_ids="EditMessage,clear"
-        tools:layout_editor_absoluteY="619dp" />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="EditMessage,clear" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/EditMessage"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:hint="@string/edit_message"
-        android:importantForAutofill="no"
-        android:padding="@dimen/margin"
-        android:textColorHint="#757575"
-        app:layout_constraintBottom_toTopOf="@id/content"
-        app:layout_constraintEnd_toStartOf="@id/clear"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <View
-        android:id="@+id/clear"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:background="@drawable/baseline_clear_24"
-        app:layout_constraintBottom_toTopOf="@id/content"
+        android:layout_margin="@dimen/margin"
+        android:contentDescription="@string/add_post"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/EditMessage" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/content"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:hint="@string/post_text"
-        android:importantForAutofill="no"
-        android:inputType="textMultiLine"
-        android:maxLines="6"
-        android:padding="@dimen/margin"
-        android:textColorHint="#757575"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/save"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <View
-        android:id="@+id/save"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:background="@android:drawable/ic_menu_send"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:srcCompat="@drawable/ic_add_24" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
